--- a/one-music-gh-pages/templates/partials/section_results.html
+++ b/one-music-gh-pages/templates/partials/section_results.html
@@ -10,10 +10,18 @@
                 </div>
                 <div class="album-info">
                   <h3 class="album-title">{{ album['album_name'] }}</h3>
-                  <h6 class="album-artist-name">{{ album['artist_name'] }}</h6>
+                  <h6 class="album-artist-name">{{ album['album_main_artist'] }}</h6>
                 </div>
-                <figcaption>
-                  <h2 style="opacity:0.3">{{ loop.index }}</h2>
+                <figcaption onclick="window.location.href='{{ url_for('album_page', album_id=album['spotify_album_id']) }}'">
+                  <h2 style="
+                    position: absolute;
+                    top: 50%;
+                    left: 50%;
+                    transform: translate(-50%, -50%);
+                    opacity: 0.5;
+                    margin: 0;
+                    text-align: center;
+                    font-size: 50px;">{{ loop.index }}</h2>
                   <p>{{ album['description'] }}</p>
                 </figcaption>
               </figure>
@@ -33,7 +41,7 @@
                   <h3 class="album-title">{{ artist['artist_name'] }}</h3>
                   <h6 class="album-artist-name">{{ artist['artist_name'] }}</h6>
                 </div>
-                <figcaption>
+                <figcaption onclick="window.location.href='{{ url_for('artist_page', artist=artist['artist_name']) }}'">
                   <h2 style="
                     position: absolute;
                     top: 50%;
@@ -60,12 +68,14 @@
             </div>
 
             <div class="music-info" style="flex-grow: 1;">
-              <h5 class="song-title">{{ loop.index }}. {{ song['track_name'] }}</h5>
-              <p class="artist-name">{{ song['track_artist'] }}</p>
+                <a href="{{ url_for('song_page', song_id=song['spotify_track_id']) }}">
+                    <h5 class="song-title">{{ loop.index }}. {{ song['track_name'] }}</h5>
+                    <p class="artist-name">{{ song['track_artist'] }}</p>
+                </a>
             </div>
 
             {% if current_user.is_authenticated %}
-              <a href="#" class="open-btn" onclick="openModal()">
+              <a href="#" class="open-btn" data-track-id="{{ song['spotify_track_id'] }}" onclick="openModal(this)">
                 <div class="add-btn">
                   <i class="icon-cloud-computing"></i>
                   <span>Add to Playlist</span>
