--- a/one-music-gh-pages/templates/event.html
+++ b/one-music-gh-pages/templates/event.html
@@ -17,15 +17,18 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
-                            <img src="static/img/bg-img/e1.jpg" alt="">
+                            <img style="height: 435px;
+                        object-fit: cover;
+                        object-position: center;
+                        display: block;" src="static/img/bg-img/about_page_overview.png" alt="">
                         </div>
                         <div class="event-text">
-                            <h4>Dj Night Party</h4>
-                            <div class="event-meta-data">
-                                <a href="#" class="event-place">VIP Sala</a>
-                                <a href="#" class="event-date">June 15, 2018</a>
-                            </div>
-                            <a href="#" class="btn see-more-btn">See Event</a>
+                            <h4>OVERVIEW</h4>
+<!--                            <div class="event-meta-data">-->
+<!--                                <a href="#" class="event-place">VIP Sala</a>-->
+<!--                                <a href="#" class="event-date">June 15, 2018</a>-->
+<!--                            </div>-->
+                            <a href="#" class="btn see-more-btn">See Details</a>
                         </div>
                     </div>
                 </div>
@@ -34,15 +37,18 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
-                            <img src="static/img/bg-img/e2.jpg" alt="">
+                            <img style="height: 435px;
+                        object-fit: cover;
+                        object-position: center;
+                        display: block;" src="static/img/bg-img/about_page_spotify_upload.jpg" alt="">
                         </div>
                         <div class="event-text">
-                            <h4>The Mission</h4>
-                            <div class="event-meta-data">
-                                <a href="#" class="event-place">Gold Arena</a>
-                                <a href="#" class="event-date">June 15, 2018</a>
-                            </div>
-                            <a href="#" class="btn see-more-btn">See Event</a>
+                            <h4>Local → Spotify</h4>
+<!--                            <div class="event-meta-data">-->
+<!--                                <a href="#" class="event-place">Gold Arena</a>-->
+<!--                                <a href="#" class="event-date">June 15, 2018</a>-->
+<!--                            </div>-->
+                            <a href="#" class="btn see-more-btn">See Details</a>
                         </div>
                     </div>
                 </div>
@@ -51,15 +57,18 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
-                            <img src="static/img/bg-img/e3.jpg" alt="">
+                            <img style="height: 435px;
+                        object-fit: cover;
+                        object-position: center;
+                        display: block;" src="static/img/bg-img/about_page_new_release.jpg" alt="">
                         </div>
                         <div class="event-text">
-                            <h4>Planet ibiza</h4>
-                            <div class="event-meta-data">
-                                <a href="#" class="event-place">Space Ibiza</a>
-                                <a href="#" class="event-date">June 15, 2018</a>
-                            </div>
-                            <a href="#" class="btn see-more-btn">See Event</a>
+                            <h4>New Releases</h4>
+<!--                            <div class="event-meta-data">-->
+<!--                                <a href="#" class="event-place">Space Ibiza</a>-->
+<!--                                <a href="#" class="event-date">June 15, 2018</a>-->
+<!--                            </div>-->
+                            <a href="#" class="btn see-more-btn">See Details</a>
                         </div>
                     </div>
                 </div>
@@ -68,15 +77,18 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
-                            <img src="static/img/bg-img/e4.jpg" alt="">
+                            <img style="height: 435px;
+                        object-fit: cover;
+                        object-position: center;
+                        display: block;" src="static/img/bg-img/about_page_discover.jpg" alt="">
                         </div>
                         <div class="event-text">
-                            <h4>Dj Night Party</h4>
-                            <div class="event-meta-data">
-                                <a href="#" class="event-place">VIP Sala</a>
-                                <a href="#" class="event-date">June 15, 2018</a>
-                            </div>
-                            <a href="#" class="btn see-more-btn">See Event</a>
+                            <h4>Discover</h4>
+<!--                            <div class="event-meta-data">-->
+<!--                                <a href="#" class="event-place">VIP Sala</a>-->
+<!--                                <a href="#" class="event-date">June 15, 2018</a>-->
+<!--                            </div>-->
+                            <a href="#" class="btn see-more-btn">See Details</a>
                         </div>
                     </div>
                 </div>
@@ -85,15 +97,18 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
-                            <img src="static/img/bg-img/e5.jpg" alt="">
+                            <img style="height: 435px;
+                        object-fit: cover;
+                        object-position: center;
+                        display: block;" src="static/img/bg-img/about_page_newsroom.jpg" alt="">
                         </div>
                         <div class="event-text">
-                            <h4>The Mission</h4>
-                            <div class="event-meta-data">
-                                <a href="#" class="event-place">Gold Arena</a>
-                                <a href="#" class="event-date">June 15, 2018</a>
-                            </div>
-                            <a href="#" class="btn see-more-btn">See Event</a>
+                            <h4>Newsroom</h4>
+<!--                            <div class="event-meta-data">-->
+<!--                                <a href="#" class="event-place">Gold Arena</a>-->
+<!--                                <a href="#" class="event-date">June 15, 2018</a>-->
+<!--                            </div>-->
+                            <a href="#" class="btn see-more-btn">See Details</a>
                         </div>
                     </div>
                 </div>
@@ -102,79 +117,82 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="single-event-area mb-30">
                         <div class="event-thumbnail">
-                            <img src="static/img/bg-img/e6.jpg" alt="">
+                            <img style="height: 435px;
+                        object-fit: cover;
+                        object-position: center;
+                        display: block;" src="static/img/bg-img/e6.jpg" alt="">
                         </div>
                         <div class="event-text">
-                            <h4>Planet ibiza</h4>
-                            <div class="event-meta-data">
-                                <a href="#" class="event-place">Space Ibiza</a>
-                                <a href="#" class="event-date">June 15, 2018</a>
-                            </div>
-                            <a href="#" class="btn see-more-btn">See Event</a>
+                            <h4>Playlist Hub</h4>
+<!--                            <div class="event-meta-data">-->
+<!--                                <a href="#" class="event-place">Space Ibiza</a>-->
+<!--                                <a href="#" class="event-date">June 15, 2018</a>-->
+<!--                            </div>-->
+                            <a href="#" class="btn see-more-btn">See Details</a>
                         </div>
                     </div>
                 </div>
 
-                <!-- Single Event Area -->
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="single-event-area mb-30">
-                        <div class="event-thumbnail">
-                            <img src="static/img/bg-img/e7.jpg" alt="">
-                        </div>
-                        <div class="event-text">
-                            <h4>Dj Night Party</h4>
-                            <div class="event-meta-data">
-                                <a href="#" class="event-place">VIP Sala</a>
-                                <a href="#" class="event-date">June 15, 2018</a>
-                            </div>
-                            <a href="#" class="btn see-more-btn">See Event</a>
-                        </div>
-                    </div>
-                </div>
+<!--                &lt;!&ndash; Single Event Area &ndash;&gt;-->
+<!--                <div class="col-12 col-md-6 col-lg-4">-->
+<!--                    <div class="single-event-area mb-30">-->
+<!--                        <div class="event-thumbnail">-->
+<!--                            <img src="static/img/bg-img/e7.jpg" alt="">-->
+<!--                        </div>-->
+<!--                        <div class="event-text">-->
+<!--                            <h4>Dj Night Party</h4>-->
+<!--                            <div class="event-meta-data">-->
+<!--                                <a href="#" class="event-place">VIP Sala</a>-->
+<!--                                <a href="#" class="event-date">June 15, 2018</a>-->
+<!--                            </div>-->
+<!--                            <a href="#" class="btn see-more-btn">See Details</a>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
 
-                <!-- Single Event Area -->
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="single-event-area mb-30">
-                        <div class="event-thumbnail">
-                            <img src="static/img/bg-img/e8.jpg" alt="">
-                        </div>
-                        <div class="event-text">
-                            <h4>The Mission</h4>
-                            <div class="event-meta-data">
-                                <a href="#" class="event-place">Gold Arena</a>
-                                <a href="#" class="event-date">June 15, 2018</a>
-                            </div>
-                            <a href="#" class="btn see-more-btn">See Event</a>
-                        </div>
-                    </div>
-                </div>
+<!--                &lt;!&ndash; Single Event Area &ndash;&gt;-->
+<!--                <div class="col-12 col-md-6 col-lg-4">-->
+<!--                    <div class="single-event-area mb-30">-->
+<!--                        <div class="event-thumbnail">-->
+<!--                            <img src="static/img/bg-img/e8.jpg" alt="">-->
+<!--                        </div>-->
+<!--                        <div class="event-text">-->
+<!--                            <h4>The Mission</h4>-->
+<!--                            <div class="event-meta-data">-->
+<!--                                <a href="#" class="event-place">Gold Arena</a>-->
+<!--                                <a href="#" class="event-date">June 15, 2018</a>-->
+<!--                            </div>-->
+<!--                            <a href="#" class="btn see-more-btn">See Details</a>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
 
-                <!-- Single Event Area -->
-                <div class="col-12 col-md-6 col-lg-4">
-                    <div class="single-event-area mb-30">
-                        <div class="event-thumbnail">
-                            <img src="static/img/bg-img/e9.jpg" alt="">
-                        </div>
-                        <div class="event-text">
-                            <h4>Planet ibiza</h4>
-                            <div class="event-meta-data">
-                                <a href="#" class="event-place">Space Ibiza</a>
-                                <a href="#" class="event-date">June 15, 2018</a>
-                            </div>
-                            <a href="#" class="btn see-more-btn">See Event</a>
-                        </div>
-                    </div>
-                </div>
+<!--                &lt;!&ndash; Single Event Area &ndash;&gt;-->
+<!--                <div class="col-12 col-md-6 col-lg-4">-->
+<!--                    <div class="single-event-area mb-30">-->
+<!--                        <div class="event-thumbnail">-->
+<!--                            <img src="static/img/bg-img/e9.jpg" alt="">-->
+<!--                        </div>-->
+<!--                        <div class="event-text">-->
+<!--                            <h4>Planet ibiza</h4>-->
+<!--                            <div class="event-meta-data">-->
+<!--                                <a href="#" class="event-place">Space Ibiza</a>-->
+<!--                                <a href="#" class="event-date">June 15, 2018</a>-->
+<!--                            </div>-->
+<!--                            <a href="#" class="btn see-more-btn">See Details</a>-->
+<!--                        </div>-->
+<!--                    </div>-->
+<!--                </div>-->
 
             </div>
 
-            <div class="row">
-                <div class="col-12">
-                    <div class="load-more-btn text-center mt-70">
-                        <a href="#" class="btn oneMusic-btn">Load More <i class="fa fa-angle-double-right"></i></a>
-                    </div>
-                </div>
-            </div>
+<!--            <div class="row">-->
+<!--                <div class="col-12">-->
+<!--                    <div class="load-more-btn text-center mt-70">-->
+<!--                        <a href="#" class="btn oneMusic-btn">Load More <i class="fa fa-angle-double-right"></i></a>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
         </div>
     </section>
     <!-- ##### Events Area End ##### -->
