Return to about page and loader processing

--- a/one-music-gh-pages/templates/event.html
+++ b/one-music-gh-pages/templates/event.html
@@ -28,7 +28,7 @@
 <!--                                <a href="#" class="event-place">VIP Sala</a>-->
 <!--                                <a href="#" class="event-date">June 15, 2018</a>-->
 <!--                            </div>-->
-                            <a href="#" class="btn see-more-btn">See Details</a>
+                            <a href="{{ url_for('about_us', name='overview') }}" class="btn see-more-btn">See Details</a>
                         </div>
                     </div>
                 </div>
@@ -48,7 +48,7 @@
 <!--                                <a href="#" class="event-place">Gold Arena</a>-->
 <!--                                <a href="#" class="event-date">June 15, 2018</a>-->
 <!--                            </div>-->
-                            <a href="#" class="btn see-more-btn">See Details</a>
+                            <a href="{{ url_for('about_us', name='local_spotify') }}" class="btn see-more-btn">See Details</a>
                         </div>
                     </div>
                 </div>
@@ -68,7 +68,7 @@
 <!--                                <a href="#" class="event-place">Space Ibiza</a>-->
 <!--                                <a href="#" class="event-date">June 15, 2018</a>-->
 <!--                            </div>-->
-                            <a href="#" class="btn see-more-btn">See Details</a>
+                            <a href="{{ url_for('about_us', name='new_releases') }}" class="btn see-more-btn">See Details</a>
                         </div>
                     </div>
                 </div>
@@ -88,7 +88,7 @@
 <!--                                <a href="#" class="event-place">VIP Sala</a>-->
 <!--                                <a href="#" class="event-date">June 15, 2018</a>-->
 <!--                            </div>-->
-                            <a href="#" class="btn see-more-btn">See Details</a>
+                            <a href="{{ url_for('about_us', name='discover') }}" class="btn see-more-btn">See Details</a>
                         </div>
                     </div>
                 </div>
@@ -108,7 +108,7 @@
 <!--                                <a href="#" class="event-place">Gold Arena</a>-->
 <!--                                <a href="#" class="event-date">June 15, 2018</a>-->
 <!--                            </div>-->
-                            <a href="#" class="btn see-more-btn">See Details</a>
+                            <a href="{{ url_for('about_us', name='newsroom') }}" class="btn see-more-btn">See Details</a>
                         </div>
                     </div>
                 </div>
@@ -128,7 +128,7 @@
 <!--                                <a href="#" class="event-place">Space Ibiza</a>-->
 <!--                                <a href="#" class="event-date">June 15, 2018</a>-->
 <!--                            </div>-->
-                            <a href="#" class="btn see-more-btn">See Details</a>
+                            <a href="{{ url_for('about_us', name='playlist_hub') }}" class="btn see-more-btn">See Details</a>
                         </div>
                     </div>
                 </div>
