--- a/one-music-gh-pages/templates/index.html
+++ b/one-music-gh-pages/templates/index.html
@@ -117,11 +117,11 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-12 col-lg-9">
-                    <div class="ablums-text text-center mb-70">
-                        <p>Check out the best tracks from the hottest albums on Billboard.
-Right now, {{ top_albums[0]['artist_name'] }}'s <strong>{{ top_albums[0]['album_name'] }}</strong>, {{ top_albums[1]['artist_name'] }}'s <strong>{{ top_albums[1]['album_name'] }}</strong>, and {{ top_albums[2]['artist_name'] }}'s <strong>{{ top_albums[2]['album_name'] }}</strong> are lighting up the charts and making waves across the globe with over {downloads} downloads worldwide. These tracks are setting the standard for what’s trending in music right now.
-Browse, discover, and easily add them to your favorite playlist — your next favorite song might just be one click away.</p>
-                    </div>
+<!--                    <div class="ablums-text text-center mb-70">-->
+<!--                        <p>Check out the best tracks from the hottest albums on Billboard.-->
+<!--Right now, {{ top_albums[0]['artist_name'] }}'s <strong>{{ top_albums[0]['album_name'] }}</strong>, {{ top_albums[1]['artist_name'] }}'s <strong>{{ top_albums[1]['album_name'] }}</strong>, and {{ top_albums[2]['artist_name'] }}'s <strong>{{ top_albums[2]['album_name'] }}</strong> are lighting up the charts and making waves across the globe with over {downloads} downloads worldwide. These tracks are setting the standard for what’s trending in music right now.-->
+<!--Browse, discover, and easily add them to your favorite playlist — your next favorite song might just be one click away.</p>-->
+<!--                    </div>-->
                 </div>
             </div>
 
