--- a/one-music-gh-pages/templates/event.html
+++ b/one-music-gh-pages/templates/event.html
@@ -211,7 +211,7 @@
                         </div>
                         <div class="newsletter-form">
                             <form action="#">
-                                <input type="search" name="search" id="newsletterSearch" placeholder="E-mail">
+                                <input type="search" name="search" id="newsletterSearch" style="padding-left:20px" placeholder="E-mail">
                                 <button type="submit" class="btn oneMusic-btn">Subscribe <i class="fa fa-angle-double-right"></i></button>
                             </form>
                         </div>
